@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install prepare setup test
-DEPEND=postgres? ( dev-db/postgresql-base ) snmp? ( net-analyzer/net-snmp ) dev-libs/libpcre dev-libs/openssl:0 sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DEPEND=postgres? ( dev-db/postgresql-base ) snmp? ( net-analyzer/net-snmp ) dev-libs/libpcre dev-libs/openssl:0 valgrind? ( dev-util/valgrind ) sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
 DESCRIPTION=High performance PPTP, PPPoE and L2TP server
 EAPI=5
 HOMEPAGE=http://accel-ppp.sourceforge.net/
-IUSE=debug doc postgres radius shaper snmp
+IUSE=debug doc postgres radius shaper snmp valgrind
 KEYWORDS=~amd64 ~x86
 LICENSE=GPL-2
 RDEPEND=postgres? ( dev-db/postgresql-base ) snmp? ( net-analyzer/net-snmp ) dev-libs/libpcre dev-libs/openssl:0
 SLOT=0
 SRC_URI=mirror://sourceforge/accel-ppp/accel-ppp-1.7.3.tar.bz2
 _eclasses_=cmake-utils	412d9e2d2c6f85f46dad595e68570d21	eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	linux-info	90944ede7e9761bd7ef07602acdef9e3	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=fb915c3aeab5b4cf5ede14227d8eb86a
+_md5_=9c0d29eb850609365444d51a145f40b1
