@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/accel-ppp/accel-ppp-1.7.3.ebuild,v 1.1 2013/01/03 21:32:08 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/accel-ppp/accel-ppp-1.7.3.ebuild,v 1.2 2014/06/03 07:34:23 pinkbyte Exp $
 
 EAPI=5
 
@@ -13,16 +13,17 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="debug doc postgres radius shaper snmp"
+IUSE="debug doc postgres radius shaper snmp valgrind"
 
-DEPEND="postgres? ( dev-db/postgresql-base )
+RDEPEND="postgres? ( dev-db/postgresql-base )
 	snmp? ( net-analyzer/net-snmp )
 	dev-libs/libpcre
 	dev-libs/openssl:0"
-RDEPEND="${DEPEND}"
+DEPEND="${RDEPEND}
+	valgrind? ( dev-util/valgrind )"
 
 DOCS=( README )
-CONFIG_CHECK="~CONFIG_L2TP ~CONFIG_PPPOE ~CONFIG_PPTP"
+CONFIG_CHECK="~L2TP ~PPPOE ~PPTP"
 
 src_prepare() {
 	sed -i  -e "/mkdir/d" \
@@ -45,11 +46,11 @@ src_configure() {
 		-DBUILD_DRIVER=FALSE
 		-DCRYPTO=OPENSSL
 		$(cmake-utils_use debug MEMDEBUG)
-		$(cmake-utils_use debug VALGRIND)
 		$(cmake-utils_use postgres LOG_PGSQL)
 		$(cmake-utils_use radius RADIUS)
 		$(cmake-utils_use shaper SHAPER)
 		$(cmake-utils_use snmp NETSNMP)
+		$(cmake-utils_use valgrind VALGRIND)
 	)
 
 	cmake-utils_src_configure
